# ai-test-data-generation

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
docs/: SCHEMA_IMPORT_FORMAT.md
examples/personas/: edge_case_user.yaml  high_volume_system.yaml  legacy_client.yaml  noisy_device.yaml  normal_user.yaml
examples/profiles/: api_testing.yaml  load_testing.yaml  streaming_testing.yaml
examples/schemas/: openapi-users.yaml  user-event.avsc  user.proto  user.schema.json  users.import.json  users.sql
schemas/: import-schema.json
src/persona_platform/: __init__.py
src/persona_platform/cli/: __init__.py  main.py
src/persona_platform/engine/: __init__.py  persona_engine.py  validation_engine.py
src/persona_platform/generators/: __init__.py  api_generator.py  base.py  fault_generator.py  file_generator.py  load_generator.py  registry.py  streaming_generator.py
src/persona_platform/personas/: __init__.py  base.py  loader.py  registry.py
src/persona_platform/profiles/: __init__.py  base.py  loader.py
src/persona_platform/schemas/: __init__.py  avro.py  base.py  canonical.py  ddl.py  jsonschema.py  parser.py  protobuf.py  swagger.py
src/persona_platform/utils/: __init__.py  helpers.py
tests/: __init__.py  test_cli_import_schema.py  test_engine.py  test_generators.py  test_integration.py  test_personas.py  test_profiles.py  test_schemas.py
